test/test_units/test_kclvm/test_types/invalid_test_data/schema/schema_13.k
schema NamedMap:
    [str]: str
    data: int
